Feat(#17): 사용하지않는dto부분정리와, Request 부분 수정