@@ -10,6 +10,7 @@ import org.springframework.transaction.annotation.Transactional;
 import cinebox.common.enums.BookingStatus;
 import cinebox.common.exception.booking.NotFoundScreenException;
 import cinebox.common.exception.booking.NotFoundSeatException;
+import cinebox.dto.BookingSeatDTO;
 import cinebox.dto.request.BookingRequest;
 import cinebox.dto.response.BookingResponse;
 import cinebox.entity.Booking;
@@ -18,29 +19,23 @@ import cinebox.entity.Screen;
 import cinebox.entity.Seat;
 import cinebox.repository.BookingRepository;
 import cinebox.repository.BookingSeatRepository;
-import cinebox.repository.ScreenRepositoryTest;
+import cinebox.repository.ScreenRepository;
 import cinebox.repository.SeatRepository;
-import cinebox.repository.UserRepositoryTest;
+import cinebox.repository.UserRepository;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 @Service
 @Slf4j
+@RequiredArgsConstructor
 public class BookingService {
 
     private final BookingRepository bookingRepository;
     private final BookingSeatRepository bookingSeatRepository;
-    private final ScreenRepositoryTest screenRepository;
-    private final UserRepositoryTest userRepository;
+    private final ScreenRepository screenRepository;
+    private final UserRepository userRepository;
     private final SeatRepository seatRepository;
 
-    public BookingService(BookingRepository bookingRepository, BookingSeatRepository bookingSeatRepository,
-                          ScreenRepositoryTest screenRepository, UserRepositoryTest userRepository, SeatRepository seatRepository) {
-        this.bookingRepository = bookingRepository;
-        this.bookingSeatRepository = bookingSeatRepository;
-        this.screenRepository = screenRepository;
-        this.userRepository = userRepository;
-        this.seatRepository = seatRepository;
-    }
 
     @Transactional
     public BookingResponse bookSeats(BookingRequest request) {
@@ -51,30 +46,27 @@ public class BookingService {
         // 상영관 이름 가져오기
         String screenName = screen.getAuditorium().getName();
 
-        // 2. 요청된 상영시간에 예약된 좌석을 확인
-        LocalDateTime requestedStartTime = request.getStartTime(); // 사용자가 요청한 상영시간
 
-        // 3. 이미 예약된 좌석 조회 (상영 시간 및 좌석 번호 고려)
-        List<String> bookedSeats = bookingSeatRepository.findByScreen_ScreenIdAndSeat_SeatNumberIn(
-                request.getScreenId(),
-                //requestedStartTime, // 요청된 상영시간
-                request.getSeatIds() // 요청된 좌석 번호
+        
+        // 상영관만 기준으로 이미 예약된 좌석 조회, 상영 ID에 해당하는 모든 예약된 좌석을 확인
+        List<String> bookedSeats = bookingSeatRepository.findByScreen_ScreenId(
+                request.getScreenId()
         ).stream()
                 .map(bookingSeat -> bookingSeat.getSeat().getSeatNumber())
                 .collect(Collectors.toList());
-
       
-     // 이미 예약된 좌석이 있는지 확인
+        // 이미 예약된 좌석이 있는지 확인
         if (!bookedSeats.isEmpty()) {
             log.error("이미 예약된 좌석: {}", bookedSeats);
 
             // 요청된 좌석이 예약된 좌석과 겹치면 예매 실패 처리
-            List<String> requestedSeats = request.getSeatIds();
+            List<String> requestedSeats = request.getSeatNumbers();
             if (requestedSeats.stream().anyMatch(bookedSeats::contains)) {
-                // 이미 예약된 좌석 정보를 조회
+                
+            	// 이미 예약된 좌석 정보를 조회, 요청된 좌석 번호들만 필터링하여 예약된 좌석을 조회
                 List<BookingSeat> alreadyBookedSeats = bookingSeatRepository.findByScreen_ScreenIdAndSeat_SeatNumberIn(
                         request.getScreenId(),
-                        request.getSeatIds()
+                        request.getSeatNumbers()
                 );
 
                 // 예약된 상영회차 시간 비교
@@ -90,15 +82,12 @@ public class BookingService {
                             .message(errorMessage)
                             .screenId(request.getScreenId())
                             .screenName(screenName)
-                            .seatIds(request.getSeatIds())
+                            .seatNumbers(request.getSeatNumbers())
                             .build();
                 }
             }
         }
-
         
-        
-
         // 예매 진행 (Booking 및 BookingSeat 객체 생성)
         Booking booking = Booking.builder()
                 .bookingDate(LocalDateTime.now())
@@ -110,23 +99,25 @@ public class BookingService {
         Booking savedBooking = bookingRepository.save(booking);
 
         // 예약된 좌석 저장
-        List<BookingSeat> bookingSeats = request.getSeatIds().stream()
-                .map(seatNumber -> {
-                    Seat seat = seatRepository.findBySeatNumberAndAuditorium_AuditoriumId(seatNumber, screen.getAuditorium().getAuditoriumId())
-                            .orElseThrow(() -> NotFoundSeatException.EXCEPTION);
-                    BookingSeat bookingSeat = new BookingSeat();
-                    bookingSeat.setScreen(screen);
-                    bookingSeat.setBooking(savedBooking);
-                    bookingSeat.setSeat(seat);
+        List<BookingSeat> bookingSeats = request.getSeatNumbers().stream()
+            .<BookingSeat>map(seatNumber -> {
+                // 좌석 조회
+                Seat seat = seatRepository.findBySeatNumberAndAuditorium_AuditoriumId(
+                        seatNumber,
+                        screen.getAuditorium().getAuditoriumId()
+                ).orElseThrow(() -> NotFoundSeatException.EXCEPTION);
 
-                    return bookingSeat;
-                })
-                .collect(Collectors.toList());
+                // DTO 생성 후 BookingSeat 변환
+                BookingSeatDTO bookingSeatDTO = new BookingSeatDTO(null, savedBooking, screen, seat);
+                return BookingSeat.fromDTO(bookingSeatDTO);
+            })
+            .toList();
+
 
         bookingSeatRepository.saveAll(bookingSeats);
 
         // 5. 총 가격 계산
-        int totalSeats = request.getSeatIds().size();
+        int totalSeats = request.getSeatNumbers().size();
         BigDecimal totalPrice = screen.getPrice().multiply(new BigDecimal(totalSeats));
         savedBooking.setTotalPrice(totalPrice);
 
@@ -135,7 +126,7 @@ public class BookingService {
                 savedBooking.getBookingId(),
                 savedBooking.getBookingDate(),
                 request.getScreenId(),
-                request.getSeatIds(),
+                request.getSeatNumbers(),
                 savedBooking.getStatus().toString(),
                 totalPrice,
                 "예매 성공",
